--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -1,194 +1,95 @@
 ﻿<!-- Slider Passer -->
 <section class="home">
-  <video class="video-slide active" src="/public/VIDEOS/mixkit-mix-of-blue-green-and-pink-colored-paints-3842.mp4" autoplay muted loop></video>
-  <video class="video-slide" src="/public/VIDEOS/mixkit-abstract-psychedelic-texture-in-motion-red-and-white-tones-12309-medium.mp4" autoplay muted loop></video>
-  <video class="video-slide" src="/public/VIDEOS/mixkit-hand-of-an-artist-with-a-brush-when-painting-5197.mp4" autoplay muted loop></video>
-  <video class="video-slide" src="/public/VIDEOS/mixkit-tour-high-above-a-city-at-dusk-41375.mp4" autoplay muted loop></video>
-  <video class="video-slide" src="/public/VIDEOS/mixkit-stars-in-space-1610.mp4" autoplay muted loop></video>
+  <video class="video-slide active" src="/public/VIDEOS/pexels-zlatin-georgiev-5608053.mp4" autoplay muted loop></video>
   <div class="content active">
-    <h1>O que é?<br><span>Arte.</span></h1>
-    <p>"Habilidade ou disposição dirigida para a execução de uma finalidade prática ou teórica, realizada de forma consciente, controlada e racional." A arte é tudo que pode ser usado para se expressar, uma pintura, um objeto, qualquer coisa. Podendo ser a expressão de um sentimento ruim, agoniante, e também até o ápice da felicidade e alegria </p>
-    <a href="#">Leia Mais</a>
-  </div>
-  <div class="content">
-    <h1>Expressão<br><span>Audiovisual</span></h1>
-    <p>Os processos interativos, procuram estabelecer a probabilidade da expressão e da criação por meios audiovisuais. Os meios audiovisuais deixam de ser apenas uma ferramenta didática, demandando uma interação continuada que permite mais do que olhar imagens, mas interpretá-las visando à criação de novas mensagens e informações.</p>
-    <a href="#">Leia Mais</a>
-  </div>
-  <div class="content">
-    <h1>Cores e <br><span>Imagens</span></h1>
-    <p>Todos os elementos de composição de uma imagem são importantes, porém, dentre todos eles o mais poderoso é a cor. Através das cores e suas harmonias, ele cria climas completamente diferentes e mesmo sem a gente perceber, nos faz mergulhar fundo em certas emoções.</p>
-    <a href="#">Leia Mais</a>
-  </div>
-  <div class="content">
-    <h1>luz e <br><span>Fotografia</span></h1>
-    <p>Uma fotografia nada mais é do que a exposição a determinada luz em um equipamento, é isso que forma as cores e composições de uma imagem. Sendo assim, é de suma importância ter completo domínio sobre esse elemento. A luz é um dos elementos mais complexos no universo da fotografia, Para saber usá-la de forma criativa é necessário dominar a técnica.</p>
-    <a href="#">Leia Mais</a>
-  </div>
-  <div class="content">
-    <h1>um jeito diferente de <br><span>viver</span></h1>
-    <p>A arte é uma forma completamente única de linguagem, que se expressa de diversas formas: na escrita, na pintura, no teatro e na música, além de muitos outros. Ela está presente em todos os lugares e faz parte de nossas vidas de maneiras que sequer imaginamos.
-
-      Agora que você já sabe o que é a arte, olhe mais atentamente ao seu redor e passe a apreciar mais os pequenos detalhes de seu dia a dia! Essa reflexão é extremamente eficaz para nosso crescimento e amadurecimento pessoal.</p>
-    <a href="#">Leia Mais</a>
+     
+        <h1>Raspagem de<br><span>Dados</span></h1>
+        <p>Habilidade ou disposição dirigida para a execução de uma finalidade prática ou teórica, realizada de forma consciente, controlada e racional." A arte é tudo que pode ser usado para se expressar, uma pintura, um objeto, qualquer coisa. Podendo ser a expressão de um sentimento ruim, agoniante, e também até o ápice da felicidade e alegria </p>
+        <a href="#">Leia Mais</a>
+      
   </div>
   <div class="media-icons">
     <a href="#"><i class="fa fa-facebook"></i></a>
     <a href="https://www.instagram.com/carlosrafaelgn/" target="_blank"><i class="fa fa-instagram"></i></a> 
     <a href="#"><i class="fa fa-twitter"></i></a> 
   </div>
-  <div class="slider-nav">
-    <div class="slider-nav-btn active"></div>
-    <div class="slider-nav-btn"></div>
-    <div class="slider-nav-btn"></div>
-    <div class="slider-nav-btn"></div>
-    <div class="slider-nav-btn"></div>
-  </div>
+
 </section>
 
-<!-- Container -->
-<div class="container-fluid container">
-<!-- Landing -->
-  <div class="row">
-    <div class="col-sm-6 coluna">
-      <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_sk5h1kfn.json"  background="transparent"  speed="1"  style="width: 400px; height: 400px;"  loop  autoplay></lottie-player>
-    </div>
-    <div class="col-sm-6 coluna">
-      <div class="box">
-        <h1>Venda</h1>
-        <h2>Publique</h2>
-        <h3>Compartilhe</h3>
-        <p>"Nesse site você pode divulgar suas artes ou compartilhar conteudos artisticos que você aprecia, divulgando e reconhecendo as melhores artes do mercado , aqui no Gallery apoiamos qualquer tipo de arte, você sempre terá sua liberdade de expressão, sem nenhum medo de se libertar através da arte
-          Aqui voce pode compartilhar sua arte, vende-la, ou apenas publica-la e deixa-la exposta para seu reconhecimento!"
-        </p>
+<div class="container-fluid container"> 
+    <h1 class="titulos">Roadmap</h1>
+    <div class="row">
+      <div class="col-sm-6 coluna">
+
+              <div class="timeline">
+                  <div class="timeline-container primary">
+                      <div class="timeline-icon">
+                          <i class="far fa-grin-wink"></i>
+                      </div>
+                      <div class="timeline-body">
+                          <h4 class="timeline-title"><span class="badge">Entendimento do Projeto</span></h4>
+                          <p>Lorem ipsum dolor sit amet.</p>
+                          <p class="timeline-subtitle">1 Hours Ago</p>
+                      </div>
+                  </div>
+                  <div class="timeline-container danger">
+                      <div class="timeline-icon">
+                          <i class="far fa-grin-hearts"></i>
+                      </div>
+                      <div class="timeline-body">
+                        <h4 class="timeline-title"><span class="badge">Definição da Ideia</span></h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p class="timeline-subtitle">2 Hours Ago</p>
+                      </div>
+                  </div>
+                  <div class="timeline-container success">
+                      <div class="timeline-icon">
+                          <i class="far fa-grin-tears"></i>
+                      </div>
+                      <div class="timeline-body">
+                        <h4 class="timeline-title"><span class="badge">Raspagem de Dados</span></h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p class="timeline-subtitle">6 Hours Ago</p>
+                      </div>
+                  </div>
+                  <div class="timeline-container warning">
+                      <div class="timeline-icon">
+                          <i class="far fa-grimace"></i>
+                      </div>
+                      <div class="timeline-body">
+                        <h4 class="timeline-title"><span class="badge">Implementação das Dashboards</span></h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p class="timeline-subtitle">1 Day Ago</p>
+                      </div>
+                  </div>
+                  <div class="timeline-container">
+                      <div class="timeline-icon">
+                          <i class="far fa-grin-beam-sweat"></i>
+                      </div>
+                      <div class="timeline-body">
+                        <h4 class="timeline-title"><span class="badge">Apresentação do Projeto</span></h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p class="timeline-subtitle">3 Days Ago</p>
+                      </div>
+                  </div>
+                  <div class="timeline-container info">
+                      <div class="timeline-icon">
+                          <i class="far fa-grin"></i>
+                      </div>
+                      <div class="timeline-body">
+                        <h4 class="timeline-title"><span class="badge">LOL</span></h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p class="timeline-subtitle">4 Days Ago</p>
+                      </div>
+                  </div>
+              </div>
+            
+      </div>
+      <div class="col-sm-6 coluna">
+        <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_sk5h1kfn.json"  background="transparent"  speed="1"  style="width: 400px; height: 400px;"  loop  autoplay></lottie-player>
       </div>
     </div>
-  </div>
-
-<!-- Cards -->
-  <h1 class="titulos">Artistas</h1>
-  <div class="row c">
-
-    <div class="col-sm-6 coluna">
-      <div class="card">
-        <img class="card-img-top" src="https://esnoticia.sv/wp-content/uploads/2020/10/21-6.jpg" alt="Card image cap" height="200px">
-        <div class="card-body">
-          <h5 class="card-title">A Noite Estrelada</h5>
-          <h6 class="card-text">Vincent van Gogh</h6>
-          <p class="card-text">A Noite Estrelada é uma pintura de Vincent van Gogh de 1889. A obra retrata a vista da janela de um quarto do hospício de Saint-Rémy-de-Provence, pouco antes do nascer do sol, com a adição de um vilarejo idealizado pelo artista.</p>
-          <a href="#" class="btn btn-primary">Veja Mais</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-sm-6 coluna">
-      <div class="card">
-        <img class="card-img-top" src="/public/IMGS/michelangelo.png" alt="Card image cap" height="200px">
-        <div class="card-body">
-          <h5 class="card-title">A Criação de Adão</h5>
-          <h6 class="card-text">Michelangelo</h6>
-          <p class="card-text">Esse é um trabalho realizado com a técnica do afresco e integra o conjunto de pinturas feitas no Teto da Capela Sistina, produzidas entre 1508 e 1512 por encomenda do papa Júlio II.</p>
-          <a href="#" class="btn btn-primary">Veja Mais</a>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="row c" style="margin-bottom: 50px;">
-
-    <div class="col-sm-6 coluna">
-      <div class="card">
-        <img class="card-img-top" src="/public/IMGS/ultimaceia.jpg" alt="Card image cap" height="200px">
-        <div class="card-body">
-          <h5 class="card-title">A Última Ceia</h5>
-          <h6 class="card-text">Leonardo da Vinci</h6>
-          <p class="card-text">A Última Ceia é uma das obras mais emblemáticas do pintor renascentista Leonardo da Vinci (1452-1519). Nela, o artista retrata a última ceia de Jesus Cristo ao lado de seus apóstolos, momentos antes dele ser crucificado.</p>
-          <a href="#" class="btn btn-primary">Veja Mais</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-sm-6 coluna">
-      <div class="card">
-        <img class="card-img-top" src="/public/IMGS/dali.jpg" alt="Card image cap" height="200px">
-        <div class="card-body">
-          <h5 class="card-title">A persistência da memória</h5>
-          <h6 class="card-text">Salvador Dalí</h6>
-          <p class="card-text">Um dos dados que mais espanta no famoso quadro de Salvador Dalí é o tempo de produção: conta-se que A persistência da memória foi pintado em apenas cinco horas.</p>
-          <a href="#" class="btn btn-primary">Veja Mais</a>
-        </div>
-      </div>
-    </div>
-
-
-  </div>
-
-<!-- Icons -->
-  <h1 class="titulos">Benefícios</h1>
-
-  <div class="row">
-    <div class="col-sm-4 coluna">
-      <div class="cube">
-        <div class="cube1">
-          <i class="material-icons icons">paid</i>
-          <h4>Remuneração Justa</h4>
-        </div>
-        <p>Publique gratuitamente suas artes e com uma baixa taxa nas transições torne suas obras uma fonte lucrativa!</p>
-      </div>
-    </div>
-    <div class="col-sm-4 coluna">
-      <div class="cube">
-        <div class="cube2">
-          <i class="material-icons icons">lightbulb</i>
-          <h4>Exponha as suas Ideias</h4>
-        </div>
-        <p> Um espaço livre e pratico, para que você possa divulgar qualquer tipo de arte e se expressar!</p>
-      </div>
-    </div>
-    <div class="col-sm-4 coluna">
-      <div class="cube">
-        <div class="cube3">
-          <i class="material-icons icons">fingerprint</i>
-          <h4>Deixe a sua Marca</h4>
-        </div>
-        <p> Postando suas artes autorais, você consegue divulga seu nome e torna o site maior!</p>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-4 coluna">
-      <div class="cube">
-        <div class="cube1">
-          <i class="material-icons icons">add_shopping_cart</i>
-          <h4>Compre Projetos</h4>
-        </div>
-        <p>Todas as artes da galeria estao disponiveis para venda, sinta-se a vontade para explorar!</p>
-      </div>
-    </div>
-    <div class="col-sm-4 coluna">
-      <div class="cube">
-        <div class="cube2">
-          <i class="material-icons icons">trending_up</i>
-          <h4>Possua Relevância</h4>
-        </div>
-        <p>Seja um artista ativo! Mantenha no possivel as suas artes atualizadas, tentando sempre manter o publico que frequenta suas artes!</p>
-      </div>
-    </div>
-    <div class="col-sm-4 coluna">
-      <div class="cube">
-        <div class="cube3">
-          <i class="material-icons icons">app_shortcut</i>
-          <h4>Explore</h4>
-        </div>
-        <p>Busque artes novas, pesquise, mergulhe nas galerias! Pois depois pode ser você que pode inspirar alguém!</p>
-      </div>
-    </div>
-  </div> 
 </div>
-
-
-
 
 <%- contentFor("pos-styles") %>
 <style type="text/css">
